possible fix for checklist add item fab-btn disappearing on iOS

--- a/src/app/tab2details/supplies/supplies.page.scss
+++ b/src/app/tab2details/supplies/supplies.page.scss
@@ -11,12 +11,12 @@
   backdrop-filter: blur(2px);
 }
 
-#add-supply-btn {
-  position: fixed;
-  bottom: 1%;
-  margin: 0 50%;
-  transform: translate(-50%, 0%);
-}
+// #add-supply-btn {
+//   // position: fixed;
+//   bottom: 1%;
+//   margin: 0 50%;
+//   transform: translate(-50%, 0%);
+// }
 
 #edit-newsupply-grid {
   background-color: inherit;
